# onboarding-training

./: README.md
Go/: Readme
Go/Practice1/: README.txt  go.mod  main.go
Go/Practice2/: README  main.go
Go/Practice3/: README  go.mod  go.sum  main_test.go
Java/Gradle/kotlin-build-1/: README.md  build.gradle.kts
Java/Gradle/kotlin-build-2/: README.md  build.gradle.kts
Java/Gradle/simple-build-1/: README.md
Java/Gradle/simple-build-2/: README.md  build.gradle
Java/Gradle/simple-build-3/: README.md  build.gradle
Java/Maven/simple-pom-1/: README.md  pom.xml
Java/Maven/simple-pom-2/: README.md  pom.xml
Java/Maven/simple-pom-3/: README.md  pom.xml
Java/Maven/simple-pom-4/: README.md  pom.xml
Python/Conda/: environment.yml
Python/Pipenv/: pipfile.toml
Python/Poetry/: pyproject.toml
