[tool.poetry]
name = "Training"
version = "0.1.0"
description = ""
authors = ["hvincentwss <hanna.vincent@whitesourcesoftware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "1.11.22"
django-formtools = "1.0"
djangorestframework = "3.10.1"
markdown = "3.1.1"
phonenumbers = "8.9.10"
pygments = "2.2.0"
pytz = "2018.5"
requests = "2.20.0"
threadfix-api = "1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
